# rtracer-rs

./: .gitignore  Cargo.toml  README.md  build.rs
app/: Cargo.toml
app/scenes/: test.json
app/src/: main.rs
scenes/: main.json  test.json
src/: entities.rs  fractal.rs  lib.rs  macro.rs  main.rs  point.rs  ray_store.rs  rendering.rs  scene.rs  utils.rs  vector.rs
