[package]
name = "rtracer-rs"
version = "0.1.0"
authors = ["olekspickle <22867443+olekspickle@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek="0.9.9"
serde="1"
serde_derive="1"
image = "0.22.3"
num-traits = "0.2.8"
num-complex = "0.2.0"
termion="1.5.3"